--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^5.5.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.0",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
@@ -32,6 +34,7 @@
     "cypress": "^12.7.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
+    "gh-pages": "^6.0.0",
     "jsdom": "^22.1.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
