--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weather-app",
   "private": true,
   "version": "0.0.1",
+  "homepage": "https://getlikeman.github.io/weather-app/",
   "type": "module",
   "scripts": {
     "dev": "vite",
